--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,21 @@
+$navbar-default-bg: #073b15;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.center {
+	text-align: center;
+}
+#logo{
+	flag: left;
+	font-size: 1.7em;
+	color: #fff;
+	text-transform: uppercase;
+	letter-spaceing: -1px;
+	font-weight: bold;
+}
+
+#logo:hover{
+	color:#fff;
+	text-decoration: none;
+}
