--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
-<h1>This is my home page</h1>
+<div class="jumbotron center">
+	<h1>Welcome to MyRecipes</h1>
+	<h2>The best recipe sharing app!</h2>
+	<p><%= link_to "Sign up or Log In", "#", class:"btn btn-danger btn-lg" %><p>
+	</p>
+</div>
