added homepage photo and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,7 @@
 		<div class="container">
     	<%= yield %>
 		</div>
+		</br></br></br></br>
+		<%= render 'layouts/footer' %>
   </body>
 </html>
