--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,10 +8,10 @@ $navbar-default-bg: #073b15;
 }
 
 .jumbotron{
-	background-image: asset-url('cover_image.png');
+	background-image: asset-url('koi.png');
 	background-size: cover;
 	background-height: 300px;
-	background-position: 0px -120px;
+	background-position: 0px 0px;
 }
 #logo{
 	flag: left;
@@ -33,4 +33,13 @@ $navbar-default-bg: #073b15;
 	margin-bottom: 30px;
 	letter-spacing: -1px;
 	font-weight: bold;
+}
+
+.btn-xlarge {
+	background-color: #073b15
+}
+
+.btn-xlarge:hover {
+	color: #fff;
+	text-decoration: none;
 }
