--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,3 +67,10 @@ $navbar-default-bg: #073b15;
 .colormatch a{
 	color: #073B15;
 }
+
+.recipe-actions {
+	padding-top: 5px;
+	a {
+		color: #fff;
+	}
+}
