--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,9 +1,11 @@
 <%= render 'shared/page_title', title: @recipe.name %>
+
 <div class="well col-md-8 col-md-offset-2">
 	<h4 class="center description"><strong>Steps</strong></h4>
 	<hr />
 	<%= simple_format(@recipe.description) %>
 	<hr />
+	
 	<div class="pull-right">
 		<p class="center">
 			<em>Created by:</em>
@@ -15,5 +17,11 @@
 			<small><%= @recipe.chef.chef_name.capitalize %></small>
 			<div class="pull-right"><%= time_ago_in_words(@recipe.created_at) %> ago</div>
 		</p>
+	</div>
+	<div class="recipe-actions">
+		<%= link_to "Edit this recipe", edit_recipe_path(@recipe), class: "btn btn-xs btn-warning" %>
+		<%= link_to "Delete this recipe", recipe_path(@recipe), method: :delete,
+																														data: {confirm: "Are you sure you want to delete this recipe?"},
+																														class: "btn btn-xs btn-danger" %>
 	</div>
 </div>
